--- a/css/style.css
+++ b/css/style.css
@@ -454,3 +454,10 @@ section {
 .card {
       box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
 }
+
+.card:hover {
+    transition: all 0.5s ease-out;
+    box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
+    border: 1px solid #cccccc;
+    background-color: white;
+  }
